NXP-32045: Deprecate BinaryManager stack